--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,10 @@
             "error",
             2
         ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
+        // "linebreak-style": [
+        //     "error",
+        //     "unix"
+        // ],
         "quotes": [
             "error",
             "single"
